--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <ul style="text-align: end;font-size:x-large;">
         <a href="index.html">HOME</a>
-        <a href="ABOUT.HTML">ABOUT</a>
+        <a href="about.html">ABOUT</a>
         <a href="contact.html">CONTACT</a>
         <a href="gallary.html">GALLARY</a>
     </ul>    
